--- a/app/src/main/res/layout-land/activity_launcher.xml
+++ b/app/src/main/res/layout-land/activity_launcher.xml
@@ -10,18 +10,28 @@
     tools:context="tp.ual.tp3.LauncherActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView" />
+        android:text="Hello World!" />
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/list_mail"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"
         android:layout_marginTop="10dp" />
+
+    <FrameLayout
+        android:id="@+id/fragment_detail"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.7"/>
+    </LinearLayout>
 
 </RelativeLayout>
